Fix Visual Grid and breakpoints issues
Fix issue 3, allowing visual grid to change as required by layout.

Remove grid settings from variables.scss

Create assets/grid-settings.scss (holds grid settings and import neat helpers)

Add override to bower.json - import bourbon then the new grid-settings file (allows grid-settings to be injected via wiredep after Bower, and before Neat)

--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,12 @@
     "neat": "~1.7.2",
     "normalize-css": "normalize.css#~3.0.3"
   },
-  "overrides": {}
+  "overrides": {
+    "bourbon": {
+      "main": [
+        "./app/assets/stylesheets/_bourbon.scss",
+        "../../assets/styles/grid-settings.scss"
+      ]
+    }
+  }
 }
