--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git://github.com/smutek/BourbonySage"
+    "url": "git://github.com/roots/sage.git"
   },
   "bugs": {
-    "url": "https://github.com/smutek/BourbonySage/issues"
+    "url": "https://github.com/roots/sage/issues"
   },
   "licenses": [
     {
@@ -35,7 +35,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.0",
     "gulp-flatten": "0.3.1",
-    "gulp-if": "^1.2.5",
+    "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.0.3",
