Fix repo and bugs url

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git://github.com/roots/sage.git"
+    "url": "git://github.com/smutek/BourbonySage"
   },
   "bugs": {
-    "url": "https://github.com/roots/sage/issues"
+    "url": "https://github.com/smutek/BourbonySage/issues"
   },
   "licenses": [
     {
